--- a/basicRPS.html
+++ b/basicRPS.html
@@ -11,9 +11,11 @@
     <main>
         <h1>ROCK PAPER SCISSORS</h1>
         <div id="result-div">
+            <p>YOU vs. COMPUTER. FIRST TO FIVE WINS.</p>
         </div>
         <div id="score-div">
             <div class="player score"></div>
+            <p>COMPUTER:</p>
             <div class="computer score"></div>
         </div>
         <div class="button-div">
