--- a/basicRPS.html
+++ b/basicRPS.html
@@ -11,7 +11,7 @@
     <main>
         <h1>ROCK PAPER SCISSORS</h1>
         <div id="result-div">
-            <p>YOU vs. COMPUTER. FIRST TO FIVE WINS.</p>
+            <p id="result-text">YOU vs. COMPUTER. FIRST TO FIVE WINS.</p>
         </div>
         <div id="score-div">
             <div class="score-flex">
